--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spicy Hut - Restaurant in Chennai</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
@@ -12,11 +13,10 @@
         <header>
             <a href="index.html" id="logo"><h2><i class="fa-solid fa-bell-concierge"></i>Spicy Hut</h2></a>
         <nav>
-            <a href=""><i class="fa-solid fa-square-caret-down"></i>Menu</a>
-            <a href=""><i class="fa-solid fa-location-crosshairs"></i>Location</a>
-            <i class="fa-solid fa-bell-concierge"></i>
+            <a href="#menuheading"><i class="fa-solid fa-square-caret-down"></i>Menu</a>
+            <a href="#locheading"><i class="fa-solid fa-location-crosshairs"></i>Location</a>
         </nav>            
-        </header>￼
+        </header>
          <div class="maintext">
                 <div class="tagline1">
                     Finest Trat for your Taste Buds
